[package]
name = "esp32-open-mac-rs"
version = "0.1.0"
authors = ["Frostie314159 <frostie.neuenhausen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { path = "../esp-hal/esp-hal", features = ["esp32"] }
log = { version = "0.4.21" }
esp-alloc = "0.4.0"
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
esp-wifi = { path = "../esp-hal/esp-wifi", features = [
    "esp32",
    "phy-enable-usb",
    "utils",
    "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
embassy-executor = "0.6.0"
embassy-futures = "0.1.1"
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
esp-hal-embassy = { path = "../esp-hal/esp-hal-embassy", features = ["esp32"] }
esp-wifi-sys = { version = "0.5.0", features = ["esp32"] }
critical-section = "1.1.3"
static_cell = { version = "2.1.0", features = ["nightly"] }
bitfield-struct = "0.8.0"
atomic-waker = "1.1.2"
embassy-sync = "0.6.0"
esp-backtrace = { version = "0.14.0", features = [
    "esp32",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.11.0", features = ["log"] }
ieee80211 = { git = "https://github.com/Frostie314159/ieee80211-rs" }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
