[package]
name = "esp32-wifi-hal-rs"
version = "0.1.0"
authors = ["Frostie314159 <frostie.neuenhausen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# ESP-HAL dependencies
esp-hal = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-hal", features = [
    "esp32",
] }
esp-alloc = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-alloc" }
esp-wifi-sys = { version = "0.5.0", features = ["esp32"] }
esp-backtrace = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-backtrace", features = [
    "esp32",
    "panic-handler",
    "println",
] }
esp-println = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-println", features = ["log"] }
esp32 = { version = "0.33.0", git = "https://github.com/esp32-open-mac/esp-pacs", package = "esp32" }

# Embassy dependencies
embassy-futures = "0.1.1"
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
embassy-sync = "0.6.0"


log = { version = "0.4.21", optional = true }
critical-section = "1.1.3"
static_cell = { version = "2.1.0" }
bitfield-struct = "0.8.0"
atomic-waker = "1.1.2"
macro-bits = "0.1.5"
defmt = { version = "0.3.8", optional = true }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
defmt = ["dep:defmt"]
log = ["dep:log"]
