[package]
name = "esp32-wifi-hal-rs"
version = "0.1.0"
authors = ["Frostie314159 <frostie.neuenhausen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# ESP-HAL
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", features = ["esp32", "unstable"] }
esp-wifi-sys = { version = "0.7.0", features = ["esp32"] }
esp32 = { git = "https://github.com/esp-rs/esp-pacs", rev = "ffbee35069d137ef611097d39fa7734c299ce124" }

# Embassy dependencies
embassy-futures = "0.1.1"
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
embassy-sync = "0.6.1"

log = { version = "0.4.21", optional = true }
critical-section = "1.1.3"
static_cell = { version = "2.1.0" }
bitfield-struct = "0.8.0"
atomic-waker = "1.1.2"
macro-bits = "0.1.5"
defmt = { version = "0.3.8", optional = true }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
defmt = ["dep:defmt"]
log = ["dep:log"]
